# ff_hrp

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
app/: charts.py  streamlit_app.py
config/: portfolio.yaml
src/ffhrp/: __init__.py  config.py  covariance.py  data_loader.py  diagnostics.py  factor_model.py  hrp.py  pipeline.py
tests/: test_charts.py  test_config.py  test_covariance.py  test_factor_model.py  test_hrp.py
